css/app.css
/* ... */
#search-counting {
  color: #ccc;
  display: none;
  min-width: 70px;
  margin: 0 4px 0 -16px;
  text-align: right;
}

#search-counting.nomatches {
  color: #B00;
}

header.search-active #search-counting {
  display: block;
}

.search-navigation-button {
  border: 0;
  height: inherit;
  overflow: hidden;
  padding: 0;
  transition: width 200ms ease-in-out;
  width: 0;
}

header.search-active .search-navigation-button {
  border-left: 1px solid #DDD;
  width: 30px;
}

#title-filename {
  color: #777;
  display: flex;
  flex: 1;
  font-size: 15px;
  justify-content: center;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: all 200ms ease-in-out;
  white-space: nowrap;
}

#title-filename.unsaved:after {
  content: " *";
}

#window-minimize {
  /* Move the 'remove' icon down so it looks like a minimize icon */
  padding-top: 18px;
}

header.hide-controls #window-minimize {
  visibility: hidden;
}

header.hide-controls #window-maximize {
  visibility: hidden;
}

header.hide-controls #window-close {
  visibility: hidden;
}

#editor {
  -webkit-box-flex: 1.0;
  position: relative;
}

/* These are the styles for the accessibility mode editor */
.editor-textarea-container {
  width: 100%;
  height: 100%;
  display: flex;
  overflow-x: hidden;
}

#editor-textarea-line-numbers {
  background: var(--light-background-color);
  min-height: calc(100% - 2*var(--editor-gutter-vertical-padding));
  height: auto;
  padding: var(--editor-gutter-padding);
  min-width: calc(var(--editor-gutter-min-size) -
    var(--editor-gutter-horiztonal-padding));
  width: auto;
  font-family: monospace;
  font-size: 14px;
  border-right: 1px solid #ddd;
  color: var(--light-theme-line-number-color);
  display: flex;
  flex-direction: column;
}

.editor-textarea-container.dark-theme #editor-textarea-line-numbers {
  background: var(--dark-background-color);
  color: var(--dark-theme-line-number-color);
  border-right: none;
}

#editor-textarea-line-numbers>div {
  width: 100%;
  text-align: right;
  height: auto;
  line-height: var(--editor-line-height);
}

.editor-textarea-wrapper {
  color: var(--light-theme-text-color);
  min-height: calc(100% - (2 * var(--editor-vertical-padding)));
  height: auto;
  padding: var(--editor-padding);
  flex: 1;
  overflow-y: hidden;
  overflow-x: auto;
}

#editor-textarea {
  border: none;
  background: none;
  color: inherit;
  height: 100%;
  margin: 0;
  width: 100%;
  padding: 0;
  resize: none;
  font-family: monospace;
  line-height: var(--editor-line-height);
  font-size: 14px;
  overflow: hidden;
}

#editor-textarea:focus, #editor-textarea:hover {
  outline: none;
}

.editor-textarea-container.dark-theme .editor-textarea-wrapper {
  background: var(--dark-background-color);
  color: var(--dark-theme-text-color);
}

#editor-textarea:focus {
  outline: none;
}

/* Markup below overrides default search input box styling. */
input[type=search] {
  -webkit-appearance:none;
}

input[type=search]:focus {
  border: 1px solid #15C;
  outline: none;
}

::-webkit-search-cancel-button,
::-webkit-search-decoration,
::-webkit-search-results-button,
::-webkit-search-results-decoration {
  display: none;
}

.mdc-icon-button::before {
  -webkit-transition: opacity 200ms;
}

/* Dialog */
#dialog-container {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 4;
  -webkit-box-align: center;
  -webkit-box-pack: center;
}

#dialog-container.open {
  display: -webkit-box;
}

.dialog-window {
  background-color: var(--light-background-color);
  border: 1px solid rgba(0,0,0,0.15);
  box-shadow: rgba(0,0,0,0.13) 0px 4px 30px;
  max-width: 50%;
  opacity: 1.0;
  padding: 24px;
}

.dialog-text {
  font-size: 15px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.dialog-buttons {
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-pack: center;
  display: -webkit-box;
  margin-top: 20px;
}

.dialog-button {
  background-color: inherit;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 3px;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-pack: center;
  color: #333;
  display: -webkit-box;
  height: 30px;
  margin: 0 5px;
  opacity: 0.8;
  padding: 0 14px;
}

.dialog-button:hover {
  border: 1px solid rgba(0,0,0,0.32);
  color: #000;
}

#editor .CodeMirror {
  position: absolute !important;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.CodeMirror-gutters {
  background-color: var(--light-background-color);
}

.CodeMirror-lines {
  line-height: var(--editor-line-height);
}

header.search-active ~ #editor div.CodeMirror .cm-matchhighlight {
  background-color: rgba(253, 207, 76, .5);
}


.hidden-character-sizer {
  position: absolute;
  visibility: hidden;
  font-family: monospace;
  line-height: var(--editor-line-height);
  word-wrap: break-word;
}

